settings API added in swagger.json
