# src/app/api/settings/classes/[id]/route.ts
@@ -1,0 +1,45 @@
+import { NextResponse } from 'next/server';
+import prisma from '../../../../../lib/prisma';
+
+export async function GET(request: Request, { params }: { params: { id: string } }) {
+  try {
+    const classLevel = await prisma.classLevel.findUnique({
+      where: { id: params.id },
+    });
+    if (!classLevel) {
+      return NextResponse.json({ error: 'Class not found' }, { status: 404 });
+    }
+    return NextResponse.json(classLevel);
+  } catch (error) {
+    console.error('Error fetching class:', error);
+    return NextResponse.json({ error: 'Failed to fetch class' }, { status: 500 });
+  }
+}
+
+export async function PUT(request: Request, { params }: { params: { id: string } }) {
+  try {
+    const body = await request.json();
+    const { name, description } = body;
+
+    const updatedClass = await prisma.classLevel.update({
+      where: { id: params.id },
+      data: { name, description },
+    });
+    return NextResponse.json(updatedClass);
+  } catch (error) {
+    console.error('Error updating class:', error);
+    return NextResponse.json({ error: 'Failed to update class' }, { status: 500 });
+  }
+}
+
+export async function DELETE(request: Request, { params }: { params: { id: string } }) {
+  try {
+    await prisma.classLevel.delete({
+      where: { id: params.id },
+    });
+    return NextResponse.json({ message: 'Class deleted successfully' });
+  } catch (error) {
+    console.error('Error deleting class:', error);
+    return NextResponse.json({ error: 'Failed to delete class' }, { status: 500 });
+  }
+}
